test-data/apply-configuration/eventing-01/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/002-body-cluster.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  annotations:
    operator.openshift.io/controller-name: ingress-creator
  creationTimestamp: null
  name: cluster
spec:
  domain: ""
  loadBalancer:
    platform:
      type: ""
status:
  defaultPlacement: ""
