test-data/apply-configuration/eventing-01/expected-output/Configuration/Create/cluster-scoped-resources/config.openshift.io/ingresses/d5f3-metadata-cluster.yaml
action: Create
controllerInstanceName: sample-operator-IngressCreator
generateName: ""
mame: cluster
resourceType:
  Group: config.openshift.io
  Resource: ingresses
  Version: v1
